test/spec/reference-types/global.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/reference-types/global.wast
(;; STDOUT ;;;
out/test/spec/reference-types/global.wast:232: assert_trap passed: undefined table index
out/test/spec/reference-types/global.wast:254: assert_invalid passed:
  error: can't global.set on immutable global at index 0.
  0000029: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:263: assert_invalid passed:
  0000013: error: expected END opcode after initializer expression
out/test/spec/reference-types/global.wast:268: assert_invalid passed:
  000000e: error: unexpected opcode in initializer expression: 0x20
out/test/spec/reference-types/global.wast:273: assert_invalid passed:
  0000013: error: expected END opcode after initializer expression
out/test/spec/reference-types/global.wast:278: assert_invalid passed:
  0000010: error: expected END opcode after initializer expression
out/test/spec/reference-types/global.wast:283: assert_invalid passed:
  000000e: error: unexpected opcode in initializer expression: 0x1
out/test/spec/reference-types/global.wast:288: assert_invalid passed:
  error: type mismatch at global initializer expression. got f32, expected i32
  0000013: error: EndGlobalInitExpr callback failed
out/test/spec/reference-types/global.wast:293: assert_invalid passed:
  0000010: error: expected END opcode after initializer expression
out/test/spec/reference-types/global.wast:298: assert_invalid passed:
  error: invalid global initializer expression, must be a constant expression
  000000e: error: EndGlobalInitExpr callback failed
out/test/spec/reference-types/global.wast:303: assert_invalid passed:
  error: type mismatch at global initializer expression. got externref, expected funcref
  0000018: error: EndGlobalInitExpr callback failed
out/test/spec/reference-types/global.wast:308: assert_invalid passed:
  0000000: error: initializer expression can only reference an imported global
  0000010: error: EndGlobalInitExpr callback failed
out/test/spec/reference-types/global.wast:313: assert_invalid passed:
  0000000: error: global variable out of range: 1 (max 1)
  0000010: error: EndGlobalInitExpr callback failed
out/test/spec/reference-types/global.wast:321: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/reference-types/global.wast:334: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/reference-types/global.wast:351: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/reference-types/global.wast:363: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/reference-types/global.wast:377: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:386: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:396: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:406: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:416: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  000002a: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:426: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:436: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:446: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:456: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:465: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:474: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:484: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  000003e: error: OnGlobalSetExpr callback failed
out/test/spec/reference-types/global.wast:502: assert_malformed passed:
  out/test/spec/reference-types/global/global.33.wat:1:33: error: redefinition of global "$foo"
  (global $foo i32 (i32.const 0))(global $foo i32 (i32.const 0))
                                  ^^^^^^
out/test/spec/reference-types/global.wast:506: assert_malformed passed:
  out/test/spec/reference-types/global/global.34.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(global $foo i32 (i32.const 0))
                                   ^^^^^^
out/test/spec/reference-types/global.wast:510: assert_malformed passed:
  out/test/spec/reference-types/global/global.35.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(import "" "" (global $foo i32))
                                   ^^^^^^
81/81 tests passed.
;;; STDOUT ;;)
